# central-demos

./: docker-compose.yml  nginx.conf
applications/maas/backend/: maas-cloud-init.yaml
applications/maas/frontend/: Dockerfile
build-manager/: main.py  pyproject.toml
session-manager/: Dockerfile  main.py  pyproject.toml
static/: index.html
static/app1/: index.html
static/app2/: index.html
